--- a/index.html
+++ b/index.html
@@ -1,58 +1,13 @@
--- yes fully open source Vault
+-- hands up skid!!
 
-local WindUI = loadstring(game:HttpGet("https://raw.githubusercontent.com/Footagesus/WindUI/main/dist/main.lua"))()
+local tuff = game.CreatorId
 
-WindUI:Localization({
-    Enabled = true,
-    Prefix = "loc:",
-    DefaultLanguage = "en",
-    Translations = {
-        ["en"] = {
-            ["WELCOME"] = "Welcome to Arch-Vault!",
-            ["IMAGEBRO"] = "Arch-Vault",
-            ["LIB_DESC"] = "Tuff Script",
-            ["SETTINGS"] = "Settings",
-            ["APPEARANCE"] = "Appearance",
-            ["FEATURES"] = "Features",
-            ["UTILITIES"] = "Utilities",
-            ["JOB"] = "Information",
-            ["UI_ELEMENTS"] = "Scripts",
-            ["CONFIGURATION"] = "Configuration",
-            ["SAVE_CONFIG"] = "Save Configuration",
-            ["LOAD_CONFIG"] = "Load Configuration",
-            ["THEME_SELECT"] = "Select Theme",
-            ["TRANSPARENCY"] = "Window Transparency"
-        }
-    }
-})
-
-WindUI.TransparencyValue = 0.2
-WindUI:SetTheme("Dark")
-
-local function gradient(text, startColor, endColor)
-    local result = ""
-    for i = 1, #text do
-        local t = (i - 1) / (#text - 1)
-        local r = math.floor((startColor.R + (endColor.R - startColor.R) * t) * 255)
-        local g = math.floor((startColor.G + (endColor.G - startColor.G) * t) * 255)
-        local b = math.floor((startColor.B + (endColor.B - startColor.B) * t) * 255)
-        result = result .. string.format('<font color="rgb(%d,%d,%d)">%s</font>', r, g, b, text:sub(i, i))
-    end
-    return result
+if tuff == 8552470237 then -- stud simulator
+    loadstring(game:HttpGet("https://raw.githubusercontent.com/ArchIsDead/Arch-Vault/refs/heads/main/stud-simulator-by-arch.lua"))()
+elseif tuff == 12013007 then -- tsb
+    loadstring(game:HttpGet("https://raw.githubusercontent.com/ArchIsDead/Arch-Vault/refs/heads/main/tsb-arch-vault.lua"))()
+elseif tuff == 67 then
+    game.Players.LocalPlayer:Kick("BOIIIII 67!!!!")
+else
+    loadstring(game:HttpGet("https://raw.githubusercontent.com/ArchIsDead/Arch-Vault/refs/heads/main/game-not-supported.lua"))()
 end
-
-WindUI:Popup({
-    Title = gradient("Arch-Vault", Color3.fromHex("#151515"), Color3.fromHex("#3E3E3E")), 
-    Icon = "skull", 
-    Content = "loc:LIB_DESC", 
-    Buttons = { 
-        { 
-            Title = "Free Open Source Script", 
-            Icon = "arrow-right", 
-            Variant = "Primary", 
-            Callback = function()
-                loadstring(game:HttpGet("https://raw.githubusercontent.com/ArchIsDead/Arch-Vault/refs/heads/main/vault-hub.lua"))()
-            end
-        } 
-    }
-})
