--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 -- hands up skid!!
-
+setclipboard("https://discord.gg/cNJBSnUTSW")
 local tuff = game.CreatorId
 
 if tuff == 8552470237 then -- stud simulator
