--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 setclipboard("https://discord.gg/cNJBSnUTSW")
 local tuff = game.CreatorId
 
-if tuff == 8552470237 then -- stud simulator
+if tuff == 8552470237 then
     loadstring(game:HttpGet("https://raw.githubusercontent.com/ArchIsDead/Arch-Vault/refs/heads/main/stud-simulator-by-arch.lua"))()
-elseif tuff == 12013007 then -- tsb
+elseif tuff == 12013007 then
     loadstring(game:HttpGet("https://raw.githubusercontent.com/ArchIsDead/Arch-Vault/refs/heads/main/tsb-arch-vault.lua"))()
-elseif tuff == 67 then
-    game.Players.LocalPlayer:Kick("BOIIIII 67!!!!")
+elseif tuff == 15579334 then
+    loadstring(game:HttpGet("https://raw.githubusercontent.com/ArchIsDead/Arch-Vault/refs/heads/main/Find-The-Noobies.lua"))()
 else
     loadstring(game:HttpGet("https://raw.githubusercontent.com/ArchIsDead/Arch-Vault/refs/heads/main/game-not-supported.lua"))()
 end
